# SCADwright

./: .gitignore  README.md  pyproject.toml
docs/: .regen-artifacts.md  README.md  add_text.md  anchors.md  animation.md  attach.md  auto-eps_fuse_and_through.md  cheatsheet.md  clearances.md  cli_and_args.md  coming_from_openscad.md  components.md  composition_helpers.md  csg.md  custom_transforms.md  debug.md  dependency_graph.md  errors_and_logging.md  extrusions.md  graph_setup.md  how_is_scadwright_different.md  introspection.md  lsp_setup.md  math.md  matrix.md  morph.md  organizing_a_project.md  preview_performance.md  primitives_2d.md  primitives_3d.md  resolution.md  scad_interop.md  specs_and_adjustments.md  style-guide.md  testing.md  transformations.md  variants.md  wrap_2d.md
examples/: .beauty-cameras.toml  README.md  battery-holder.py  box-and-lid.py  convex-caliper.py  electronics-case.py  lens-housing.py  rocket.py  shelf-bracket.py  simple-lens-housing.py  simple-plate.py  text_orientations.py  v-block.py  wall-hook.py
pycharm/: README.md  build.gradle.kts  settings.gradle.kts
tests/: conftest.py  test_add_text.py  test_add_text_conical.py  test_add_text_cylindrical.py  test_add_text_inner_wall.py  test_add_text_metrics.py  test_add_text_multiline.py  test_add_text_orientation.py  test_add_text_overshoot.py  test_add_text_rim.py  test_adjusted_marker.py  test_adjustments.py  test_adjustments_classdef.py  test_adjustments_introspection.py  test_alignment.py  test_anchor.py  test_anchor_expression_validation.py  test_anchor_geometry_validation.py  test_anchor_kind.py  test_anchor_matching.py  test_anchor_propagation.py  test_anchor_propagation_through_difference.py  test_animation.py  test_apng.py  test_args.py  test_arrange_on_bed.py  test_asserts.py  test_attach_bond.py  test_attach_cylindrical_angle.py  test_attach_orient.py  test_attach_spherical_polar.py  test_bbox_cache.py  test_bbox_children_marker.py  test_bbox_extrude.py  test_bbox_primitive.py  test_bbox_resize.py  test_bbox_visitor.py  test_bool_not_number.py  (+181 more)
(+354 files in other folders)
