[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scadwright"
version = "0.0.1"
description = "Python-first OpenSCAD authoring — classes as modules, fluent transforms, better errors."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brian Howard" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

[project.optional-dependencies]
equations = ["sympy>=1.12"]
dev = ["pytest>=7", "sympy>=1.12"]

[project.scripts]
scadwright = "scadwright.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scadwright"]

[tool.pytest.ini_options]
testpaths = ["tests"]
